it 3 + username o email

--- a/starter_code/views/auth/login.hbs
+++ b/starter_code/views/auth/login.hbs
@@ -8,15 +8,15 @@
 
 <form action="/login" method="post">
   <div>
-    <label for="email-input"> Email </label>
-    <input type="email" name="email" id="email-input"
-      placeholder="e.g., xena@warrior.company">
+    <label for="credentials-input"> Email/Username </label>
+    <input type="text" name="credentials" id="email-input"
+      placeholder="direction@domain.topleveldomain">
   </div>
 
   <div>
     <label for="password-input"> Password </label>
     <input type="password" name="password" id="password-input"
-      placeholder="e.g., ••••••••••••">
+      placeholder="NombreFechaDeNacimiento">
   </div>
 
   <button> Log In </button>
