--- a/starter_code/views/auth/signup.hbs
+++ b/starter_code/views/auth/signup.hbs
@@ -10,19 +10,25 @@
   <div>
     <label for="name-input"> Name </label>
     <input type="text" name="name" id="name-input"
-      placeholder="e.g., Diana Prince">
+      placeholder="Pepe Perez">
+  </div>
+
+  <div>
+    <label for="name-input"> Username </label>
+    <input type="text" name="username" id="username-input"
+      placeholder="Pepe1234">
   </div>
 
   <div>
     <label for="email-input"> Email </label>
     <input type="email" name="email" id="email-input"
-      placeholder="e.g., diana@themyscira.agency">
+      placeholder="direction@domain.topleveldomain">
   </div>
 
   <div>
     <label for="password-input"> Password </label>
     <input type="password" name="password" id="password-input"
-      placeholder="e.g., ••••••••••••">
+      placeholder="NombreFechaDeNacimiento">
   </div>
 
   <button> Create New Account </button>
