--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,4 +1,4 @@
-<p> Welcome to {{ title }}. </p>
+<h1> Welcome to {{ title }}. </h1>
 
 {{#if isUserLoggedIn}}
   <p> Hello, {{ currentUserInfo.name }}. </p>
